--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "dependencies": {
         "express": "4.13.0",
         "sequelize": "3.3.2",
-        "node-uuid": "1.4.3"
+        "node-uuid": "1.4.3",
+        "pg": "4.4.0",
+        "pg-hstore": "2.3.2",
+        "mysql": "2.7.0"
     }
 }
