--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "node-uuid": "1.4.3",
         "pg": "4.4.0",
         "pg-hstore": "2.3.2",
-        "mysql": "2.7.0"
+        "mysql": "2.7.0",
+        "passport-facebook": "2.0.0",
+        "passport": "0.2.2"
     }
 }
