--- a/config.json
+++ b/config.json
@@ -13,10 +13,10 @@
 	"prod": {
 		"port": "8080",
 		"database": {
-			"username": "aqaknwvrifxttj",
-			"password": "Hov5hGWKhLPKMrXN415ct7wpRo",
-			"database": "df3ui6jstk2pu5",
-			"host": "ec2-54-227-249-165.compute-1.amazonaws.com",
+			"username": "nijvuxvnkvnrrp",
+			"password": "DWk2lqYk9Uo7A0CeffzAgWRnua",
+			"database": "dbpc484raqmkdk",
+			"host": "ec2-107-20-223-116.compute-1.amazonaws.com",
 			"dialect": "postgres",
 			"port": 5432
 		}
