--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
         "pg-hstore": "2.3.2",
         "mysql": "2.7.0",
         "passport-facebook": "2.0.0",
-        "passport": "0.2.2"
+        "passport": "0.2.2",
+        "body-parser": "1.13.1",
+        "morgan": "1.6.0"
     }
 }
