--- a/config.json
+++ b/config.json
@@ -13,9 +13,9 @@
 	"prod": {
 		"port": "8080",
 		"database": {
-			"username": "nijvuxvnkvnrrp",
-			"password": "DWk2lqYk9Uo7A0CeffzAgWRnua",
-			"database": "dbpc484raqmkdk",
+			"username": "bexbapylujohrv",
+			"password": "45c-1iMIkUoiSXA0ddLLHdp0lP",
+			"database": "d9r1n6j7ecc5ej",
 			"host": "ec2-107-20-223-116.compute-1.amazonaws.com",
 			"dialect": "postgres",
 			"port": 5432
