--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-    "name": "Rideshare",
-    "version": "0.1.0",
-    "private": true,
-    "owner": "Deep Randhawa <deepsaranr@gmail.com>",
-    "dependencies": {
-        "express": "4.13.0",
-        "sequelize": "3.3.2",
-        "node-uuid": "1.4.3",
-        "pg": "4.4.0",
-        "pg-hstore": "2.3.2",
-        "mysql": "2.7.0",
-        "passport-facebook": "2.0.0",
-        "passport": "0.2.2",
-        "body-parser": "1.13.1",
-        "morgan": "1.6.0"
-    }
+  "name": "Rideshare",
+  "version": "0.1.0",
+  "private": true,
+  "owner": "Deep Randhawa <deepsaranr@gmail.com>",
+  "dependencies": {
+    "body-parser": "^1.13.1",
+    "cookie-parser": "^1.3.5",
+    "express": "^4.13.0",
+    "express-session": "^1.11.3",
+    "method-override": "^2.3.3",
+    "morgan": "^1.6.0",
+    "mysql": "^2.7.0",
+    "node-uuid": "^1.4.3",
+    "passport": "^0.2.2",
+    "passport-facebook-token": "^2.1.0",
+    "pg": "^4.4.0",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^3.3.2"
+  }
 }
