--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Rideshare",
   "version": "0.1.0",
   "private": true,
-  "owner": "Deep Randhawa <deepsaranr@gmail.com>",
+  "author": "Deep Randhawa <deepsaranr@gmail.com>",
   "dependencies": {
     "body-parser": "^1.13.1",
     "cookie-parser": "^1.3.5",
