--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.13.1",
     "cookie-parser": "^1.3.5",
+    "cookie-session": "^1.2.0",
     "express": "^4.13.0",
     "express-session": "^1.11.3",
     "method-override": "^2.3.3",
