--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 node_modules/*
+examples/populate/.Python
+examples/populate/.ipynb_checkpoints/
+examples/populate/bin/
+examples/populate/include/
+examples/populate/lib/
