--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "author": "Deep Randhawa <deepsaranr@gmail.com>",
   "dependencies": {
+    "async": "^1.4.0",
     "body-parser": "^1.13.1",
     "cookie-parser": "^1.3.5",
     "cookie-session": "^1.2.0",
@@ -17,6 +18,7 @@
     "passport-facebook-token": "^2.1.0",
     "pg": "^4.4.0",
     "pg-hstore": "^2.3.2",
+    "request": "^2.60.0",
     "sequelize": "^3.3.2"
   }
 }
